@@ -125,6 +125,33 @@ sub is_logged_in {
     return exists $_[0]->{session_id};
 } # is_logged_in()
 
+sub read_config {
+    my $fname = shift;
+
+    my $known_paths = [ # some known paths of other configuration files
+        "$ENV{HOME}/.idoitcli/config.json",
+    ];
+
+    unless ( $fname ) {
+        for ( @$known_paths ) {
+            if ( -r $_ ) {
+                $fname = $_;
+                last;
+            }
+        }
+    }
+    open(my $fh, '<', $fname)
+      or die "Can't open config file '$fname': $!";
+
+    my $config = _read_config_fh($fh);
+
+    close($fh);
+
+    $config->{config_file} = $fname;
+
+    return $config;
+} # read_config()
+
 sub _read_config_fh {
     my $fh = shift;
 
@@ -292,6 +319,27 @@ to close the session on the server.
 
 Tests if the WebService::IdoitAPI object has a session ID -
 that means it is logged in.
+
+=head2 read_config
+
+    my $config = WebService::IdoitAPI::read_config($path);
+    my $api = WebService::IdoitAPI->new( $config );
+
+This is a convenience function,
+that tries to extract the necessary keys (C<< apikey password url username >>)
+from the file whose name is given by C<< $path >>.
+
+If C<< $path >> is not given or C<< undef >>,
+the function tries some known paths of configuration files.
+Currently there is only known path:
+
+=over 4
+
+=item C<< $ENV{HOME}/.idoitcli/config.json >>
+
+the configuration file used by the PHP CLI client I<< idoitcli >>.
+
+=back
 
 =head1 AUTHOR
 
