@@ -1,6 +1,8 @@
 Revision history for WebService-IdoitAPI
 
 	- add CLI options '--json' and '--pretty' to bin/idoit-reports
+	- WebService::IdoitAPI::read_config() tries to find a config file
+	  automatically if none is given
 
 v0.1.3 Sun Feb 19 10:47:42 CET 2023
 	- t/02-connection.t seems to work only with perl >= 5.14
